adjust layout, add help panel

--- a/src/renderer/src/assets/style.css
+++ b/src/renderer/src/assets/style.css
@@ -17,3 +17,12 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
+
+input[type='checkbox'],
+input[type='radio'] {
+  cursor: pointer;
+}
+
+input ~ label {
+  cursor: pointer;
+}
