--- a/src/renderer/src/assets/skeleton-theme.css
+++ b/src/renderer/src/assets/skeleton-theme.css
@@ -11,33 +11,33 @@
   --theme-rounded-container: 8px;
   /* =~= Theme On-X Colors =~= */
   --on-primary: #fff;
-  --on-accent: #fff;
+  --on-accent: #000;
   --on-tertiary: #000;
-  --on-warning: #000;
+  --on-warning: #fff;
   --on-surface: #fff;
   /* =~= Theme Colors | Tailwind =~= */
-  /* red | #ef4444 */
-  --color-primary-50: 254 242 242; /* ⬅ #fef2f2 */
-  --color-primary-100: 254 226 226; /* ⬅ #fee2e2 */
-  --color-primary-200: 254 202 202; /* ⬅ #fecaca */
-  --color-primary-300: 252 165 165; /* ⬅ #fca5a5 */
-  --color-primary-400: 248 113 113; /* ⬅ #f87171 */
-  --color-primary-500: 239 68 68; /* ⬅ #ef4444 */
-  --color-primary-600: 220 38 38; /* ⬅ #dc2626 */
-  --color-primary-700: 185 28 28; /* ⬅ #b91c1c */
-  --color-primary-800: 153 27 27; /* ⬅ #991b1b */
-  --color-primary-900: 127 29 29; /* ⬅ #7f1d1d */
-  /* sky | #0ea5e9 */
-  --color-accent-50: 240 249 255; /* ⬅ #f0f9ff */
-  --color-accent-100: 224 242 254; /* ⬅ #e0f2fe */
-  --color-accent-200: 186 230 253; /* ⬅ #bae6fd */
-  --color-accent-300: 125 211 252; /* ⬅ #7dd3fc */
-  --color-accent-400: 56 189 248; /* ⬅ #38bdf8 */
-  --color-accent-500: 14 165 233; /* ⬅ #0ea5e9 */
-  --color-accent-600: 2 132 199; /* ⬅ #0284c7 */
-  --color-accent-700: 3 105 161; /* ⬅ #0369a1 */
-  --color-accent-800: 7 89 133; /* ⬅ #075985 */
-  --color-accent-900: 12 74 110; /* ⬅ #0c4a6e */
+  /* indigo | #6366f1 */
+  --color-primary-50: 238 242 255; /* ⬅ #eef2ff */
+  --color-primary-100: 224 231 255; /* ⬅ #e0e7ff */
+  --color-primary-200: 199 210 254; /* ⬅ #c7d2fe */
+  --color-primary-300: 165 180 252; /* ⬅ #a5b4fc */
+  --color-primary-400: 129 140 248; /* ⬅ #818cf8 */
+  --color-primary-500: 99 102 241; /* ⬅ #6366f1 */
+  --color-primary-600: 79 70 229; /* ⬅ #4f46e5 */
+  --color-primary-700: 67 56 202; /* ⬅ #4338ca */
+  --color-primary-800: 55 48 163; /* ⬅ #3730a3 */
+  --color-primary-900: 49 46 129; /* ⬅ #312e81 */
+  /* indigo | #6366f1 */
+  --color-accent-50: 238 242 255; /* ⬅ #eef2ff */
+  --color-accent-100: 224 231 255; /* ⬅ #e0e7ff */
+  --color-accent-200: 199 210 254; /* ⬅ #c7d2fe */
+  --color-accent-300: 165 180 252; /* ⬅ #a5b4fc */
+  --color-accent-400: 129 140 248; /* ⬅ #818cf8 */
+  --color-accent-500: 99 102 241; /* ⬅ #6366f1 */
+  --color-accent-600: 79 70 229; /* ⬅ #4f46e5 */
+  --color-accent-700: 67 56 202; /* ⬅ #4338ca */
+  --color-accent-800: 55 48 163; /* ⬅ #3730a3 */
+  --color-accent-900: 49 46 129; /* ⬅ #312e81 */
   /* emerald | #10b981 */
   --color-tertiary-50: 236 253 245; /* ⬅ #ecfdf5 */
   --color-tertiary-100: 209 250 229; /* ⬅ #d1fae5 */
@@ -49,17 +49,17 @@
   --color-tertiary-700: 4 120 87; /* ⬅ #047857 */
   --color-tertiary-800: 6 95 70; /* ⬅ #065f46 */
   --color-tertiary-900: 6 78 59; /* ⬅ #064e3b */
-  /* orange | #f97316 */
-  --color-warning-50: 255 247 237; /* ⬅ #fff7ed */
-  --color-warning-100: 255 237 213; /* ⬅ #ffedd5 */
-  --color-warning-200: 254 215 170; /* ⬅ #fed7aa */
-  --color-warning-300: 253 186 116; /* ⬅ #fdba74 */
-  --color-warning-400: 251 146 60; /* ⬅ #fb923c */
-  --color-warning-500: 249 115 22; /* ⬅ #f97316 */
-  --color-warning-600: 234 88 12; /* ⬅ #ea580c */
-  --color-warning-700: 194 65 12; /* ⬅ #c2410c */
-  --color-warning-800: 154 52 18; /* ⬅ #9a3412 */
-  --color-warning-900: 124 45 18; /* ⬅ #7c2d12 */
+  /* red | #ef4444 */
+  --color-warning-50: 254 242 242; /* ⬅ #fef2f2 */
+  --color-warning-100: 254 226 226; /* ⬅ #fee2e2 */
+  --color-warning-200: 254 202 202; /* ⬅ #fecaca */
+  --color-warning-300: 252 165 165; /* ⬅ #fca5a5 */
+  --color-warning-400: 248 113 113; /* ⬅ #f87171 */
+  --color-warning-500: 239 68 68; /* ⬅ #ef4444 */
+  --color-warning-600: 220 38 38; /* ⬅ #dc2626 */
+  --color-warning-700: 185 28 28; /* ⬅ #b91c1c */
+  --color-warning-800: 153 27 27; /* ⬅ #991b1b */
+  --color-warning-900: 127 29 29; /* ⬅ #7f1d1d */
   /* zinc | #71717a */
   --color-surface-50: 250 250 250; /* ⬅ #fafafa */
   --color-surface-100: 244 244 245; /* ⬅ #f4f4f5 */
