--- a/src/renderer/src/assets/skeleton-theme-2.css
+++ b/src/renderer/src/assets/skeleton-theme-2.css
@@ -61,14 +61,25 @@
   --color-warning-800: 154 52 18; /* ⬅ #9a3412 */
   --color-warning-900: 124 45 18; /* ⬅ #7c2d12 */
   /* zinc | #71717a */
-  --color-surface-50: 250 250 250; /* ⬅ #fafafa */
-  --color-surface-100: 244 244 245; /* ⬅ #f4f4f5 */
-  --color-surface-200: 228 228 231; /* ⬅ #e4e4e7 */
-  --color-surface-300: 212 212 216; /* ⬅ #d4d4d8 */
-  --color-surface-400: 161 161 170; /* ⬅ #a1a1aa */
-  --color-surface-500: 113 113 122; /* ⬅ #71717a */
-  --color-surface-600: 82 82 91; /* ⬅ #52525b */
-  --color-surface-700: 63 63 70; /* ⬅ #3f3f46 */
-  --color-surface-800: 39 39 42; /* ⬅ #27272a */
-  --color-surface-900: 24 24 27; /* ⬅ #18181b */
+  //--color-surface-50: 250 250 250; /* ⬅ #fafafa */
+  //--color-surface-100: 244 244 245; /* ⬅ #f4f4f5 */
+  //--color-surface-200: 228 228 231; /* ⬅ #e4e4e7 */
+  //--color-surface-300: 212 212 216; /* ⬅ #d4d4d8 */
+  //--color-surface-400: 161 161 170; /* ⬅ #a1a1aa */
+  //--color-surface-500: 113 113 122; /* ⬅ #71717a */
+  //--color-surface-600: 82 82 91; /* ⬅ #52525b */
+  //--color-surface-700: 63 63 70; /* ⬅ #3f3f46 */
+  //--color-surface-800: 39 39 42; /* ⬅ #27272a */
+  //--color-surface-900: 24 24 27; /* ⬅ #18181b */
+  /* surface | #2b2e40 */
+  --color-surface-50: 223 224 226; /* ⬅ #dfe0e2 */
+  --color-surface-100: 213 213 217; /* ⬅ #d5d5d9 */
+  --color-surface-200: 202 203 207; /* ⬅ #cacbcf */
+  --color-surface-300: 170 171 179; /* ⬅ #aaabb3 */
+  --color-surface-400: 107 109 121; /* ⬅ #6b6d79 */
+  --color-surface-500: 43 46 64; /* ⬅ #2b2e40 */
+  --color-surface-600: 39 41 58; /* ⬅ #27293a */
+  --color-surface-700: 32 35 48; /* ⬅ #202330 */
+  --color-surface-800: 26 28 38; /* ⬅ #1a1c26 */
+  --color-surface-900: 21 23 31; /* ⬅ #15171f */
 }
